--- a/Git-Assignment/pom.xml
+++ b/Git-Assignment/pom.xml
@@ -18,7 +18,13 @@
         <!-- Used as the 'Vendor' for JNLP generation -->
         <name>Your Organisation</name>
     </organization>
-
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
