--- a/Git-Assignment/pom.xml
+++ b/Git-Assignment/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>com.elrougy.MainApp</mainClass>
+        <mainClass>datasource.gui.application.DataBaseInterfaceApplication</mainClass>
     </properties>
 
     <organization>
